# mnemonic-generator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
