[package]
name = "mnemonic-generator"
version = "0.1.1"
edition = "2021"
authors = ["Abdurrahman Alp Köken <abdurrahman@akoken.com>"]
license = "MIT"
description = "A library to generate Docker-like mnemonics."
repository = "https://github.com/akoken/mnemonic-generator"
documentation = "https://docs.rs/mnemonic-generator"
keywords = ["mnemonic", "wordlist", "docker"]

[dependencies]
rand = "0.8.5"
thiserror = "2.0.7"

